--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,11 @@
     padding: 20px;
 }
 
+.app > p {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .home {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
